finished first form but need to fix overflow

--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -90,9 +90,31 @@
 
 }
 
+.itemContainerRem{
+    display: flex; 
+    flex-direction: row;
+    font-size: 12px;
+    font-family: 'Noto Sans SC', sans-serif;
+    height: 37px; 
+    width: auto;
+    padding: 5px;
+    margin-top: 25px; 
+    margin-right: 20px;
+    border-radius: 15px;
+    background-color: #FFF5ED;
+    align-items: center;
+
+}
+
 .items{
     display: flex; 
     flex-direction: row; 
+    width: 450px;
+    overflow-y: scroll;
+    flex: 1;
+    flex-wrap: 'wrap';
+    /* overflow: scroll;
+    width: 450px; */
 }
 
 .input{
@@ -104,7 +126,7 @@
     property: value !important;
     margin-left: 5px; 
     margin-right: 10px; 
-    margin-top: auto;
+    margin-top: 2.5px;
     margin-bottom: auto;
 }
 
